--- a/index.html
+++ b/index.html
@@ -15,45 +15,47 @@
     <title>Frontend Mentor | 3-column preview card component</title>
   </head>
   <body>
-    <article>
-      <div class="sedans">
-        <img src="icon-sedans.svg" alt="icon-sedans" class="icon" />
-        <h1 class="title">SEDANS</h1>
-        <p class="description">
-          Choose a sedan for its affordability and excellent fuel economy. Ideal
-          for cruising in the city or on your next road trip.
-        </p>
-        <button class="button1">Learn More</button>
-      </div>
-      <div class="suvs">
-        <img src="icon-suvs.svg" alt="icon-suvs" class="icon" />
-        <h1 class="title">SUVS</h1>
-        <p class="description">
-          Take an SUV for its spacious interior, power, and versatility. Perfect
-          for your next family vacation and off-road adventures.
-        </p>
-        <button class="button2">Learn More</button>
-      </div>
-      <div class="luxury">
-        <img src="icon-luxury.svg" alt="icon-luxury" class="icon" />
-        <h1 class="title">LUXURY</h1>
-        <p class="description">
-          TakeCruise in the best car brands without the bloated prices. Enjoy
-          the enhanced comfort of a luxury rental and arrive in style.
-        </p>
-        <button class="button3">Learn More</button>
-      </div>
-    </article>
+    <main>
+      <article>
+        <div class="sedans">
+          <img src="icon-sedans.svg" alt="icon-sedans" class="icon" />
+          <h1 class="title">SEDANS</h1>
+          <p class="description">
+            Choose a sedan for its affordability and excellent fuel economy.
+            Ideal for cruising in the city or on your next road trip.
+          </p>
+          <button class="button1">Learn More</button>
+        </div>
+        <div class="suvs">
+          <img src="icon-suvs.svg" alt="icon-suvs" class="icon" />
+          <h1 class="title">SUVS</h1>
+          <p class="description">
+            Take an SUV for its spacious interior, power, and versatility.
+            Perfect for your next family vacation and off-road adventures.
+          </p>
+          <button class="button2">Learn More</button>
+        </div>
+        <div class="luxury">
+          <img src="icon-luxury.svg" alt="icon-luxury" class="icon" />
+          <h1 class="title">LUXURY</h1>
+          <p class="description">
+            TakeCruise in the best car brands without the bloated prices. Enjoy
+            the enhanced comfort of a luxury rental and arrive in style.
+          </p>
+          <button class="button3">Learn More</button>
+        </div>
+      </article>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >
-      Coded by
-      <a href="https://github.com/Janardhan2131" target="_blank"
-        >Topireddy Janardhan Reddy</a
-      >
-    </div>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >
+        Coded by
+        <a href="https://github.com/Janardhan2131" target="_blank"
+          >Topireddy Janardhan Reddy</a
+        >
+      </div>
+    </main>
   </body>
 </html>
